--- a/unipeProjeto/projetoCrud/src/app/app.component.html
+++ b/unipeProjeto/projetoCrud/src/app/app.component.html
@@ -1,4 +1,9 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<head>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ 
+</head>
+
 <body>
     <div class="container mt-5 mb-5" >
         <h1>Cadastre aqui os seus funcionários</h1>
